--- a/src/components/heading/heading.module.css
+++ b/src/components/heading/heading.module.css
@@ -7,9 +7,10 @@
 
 .h2{
     font-size: 22px;
-    margin: 0;
     line-height: 35px;
     font-weight: 500;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .h3{
