--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -9,134 +9,147 @@
 		[ratestart] auto [end];
 }
 
-.logo{
-    grid-column: start / logoend;
-    grid-row: 1 / span 2;
+.logo {
+	grid-column: start / logoend;
+	grid-row: 1 / span 2;
 }
 
 .logo img {
-    border-radius: 5px;
+	border-radius: 5px;
 }
 
-.title, .tags {
-    grid-column: titlestart / middle;
+.title,
+.tags {
+	grid-column: titlestart / middle;
 }
 
-.price, .priceTitle {
-    grid-column: pricestart / priceend;
-    white-space: nowrap;
+.price,
+.priceTitle {
+	grid-column: pricestart / priceend;
+	white-space: nowrap;
 }
 
-.credit, .creditTitle {
-    grid-column: creditstart / creditend;
+.credit,
+.creditTitle {
+	grid-column: creditstart / creditend;
 }
 
-.rating, .rateTitle {
-    grid-column: ratestart / end;
-    white-space: nowrap;
+.rating,
+.rateTitle {
+	grid-column: ratestart / end;
+	white-space: nowrap;
+}
+
+.hr,
+.description,
+.actions,
+.hr2 {
+	grid-column: start / end;
 }
 
 .title {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 27px;
-    align-self: flex-end;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 27px;
+	align-self: flex-end;
 }
 
 .category {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
-.price, .credit {
-    font-size: 20px;
-    line-height: 27px;
-    align-self: flex-end;
+.price,
+.credit {
+	font-size: 20px;
+	line-height: 27px;
+	align-self: flex-end;
 }
 
 .month {
-    font-size: 14px;
-    line-height: 19px;
-
+	font-size: 14px;
+	line-height: 19px;
 }
 
 .rating {
-    align-self: flex-end;
+	align-self: flex-end;
 }
 
-.hr, .hr2, .description, .actions {
-    grid-column: start / end;
-}
-
-.priceTitle, .creditTitle, .rateTitle {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 19px;
+.priceTitle,
+.creditTitle,
+.rateTitle {
+	font-weight: 300;
+	font-size: 14px;
+	line-height: 19px;
 }
 
 .oldPrice {
-    margin-left: 15px;
+	margin-left: 15px;
 }
 
-.features{
-    grid-column: start / middle;
-    margin-top: 20px;
+.features {
+	grid-column: start / middle;
 }
 
 .advBlock {
-    grid-column: middle / end;
-    font-size: 16px;
-    line-height: 22px;
+	grid-column: middle / end;
+	font-size: 16px;
+	line-height: 22px;
 }
 
-.advantageTitle, .disadvantageTitle {
-    font-weight: bold;
-    margin-bottom: 5px;
+.advantageTitle,
+.disadvantageTitle {
+	font-weight: bold;
+	margin-bottom: 5px;
 }
 
-.advantages{
-    border-left: 2px solid var(--green);
-    padding-left: 15px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+.advantages {
+	border-left: 2px solid var(--green);
+	padding-left: 15px;
+	margin-bottom: 20px;
 }
 
 .disadvantages {
-    border-left: 2px solid var(--red);
-    padding-left: 15px;
+	border-left: 2px solid var(--red);
+	padding-left: 15px;
 }
 
 .characteristic {
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    align-items: baseline;
-    gap: 10px;
-    padding-right: 60px;
-    line-height: 32px;
+	display: grid;
+	grid-template-columns: auto 1fr auto;
+	align-items: baseline;
+	gap: 10px;
+	padding-right: 60px;
+	line-height: 32px;
 }
 
 .characteristicName {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .characteristicDots {
-    border-bottom: 1px dashed var(--gray-light);
-    margin-bottom: 5px;
+	border-bottom: 1px dashed var(--gray-light);
+	margin-bottom: 5px;
 }
 
 .reviewBtn {
-    margin-left: 15px;
+	margin-left: 15px;
 }
 
-.opened{
-    max-height: auto;
-    padding: 30px;
-    overflow: hidden;
+.reviews {
+	overflow: hidden;
+	padding: 30px;
 }
 
-.closed{
-    max-height: 0;
-    padding: 0;
-    overflow: hidden;
+.opened {
+	overflow: hidden;
+	max-height: auto;
+	padding: 30px;
+}
+
+.closed {
+	max-height: 0;
+	padding: 0;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 1330px) {
