--- a/src/components/review-form/review-form.module.css
+++ b/src/components/review-form/review-form.module.css
@@ -27,6 +27,36 @@
 .info {
 	margin-left: 15px;
 }
+.panel {
+	padding: 20px;
+	position: relative;
+	border-radius: 5px;
+	margin-top: 20px;
+}
+
+.success {
+	background-color: var(--green-light);
+}
+
+.error {
+	background-color: var(--red-light);
+}
+
+.error .close path {
+	stroke: var(--primary-hover);
+}
+
+.successTitle {
+	font-weight: bold;
+}
+
+.close {
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	cursor: pointer;
+}
+
 @media screen and (max-width: 1130px) {
 	.reviewForm {
 		grid-template-columns: [start] 1fr 1fr [end];
