--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,8 +22,8 @@ ul {
 }
 
 #nprogress .bar {
-	background-color: black !important;
-	height: 10px;
+	background-color: rgb(9, 237, 9) !important;
+	height: 15px;
 }
 
 :root {
